src/main/java/com/example/formservice/handler/error/exception/UserNotFoundException.java
package com.example.formservice.handler.error.exception;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}